--- a/fys4220-jbook/references.bib
+++ b/fys4220-jbook/references.bib
@@ -1,6 +1,3 @@
----
----
-
 @inproceedings{holdgraf_evidence_2014,
 	address = {Brisbane, Australia, Australia},
 	title = {Evidence for {Predictive} {Coding} in {Human} {Auditory} {Cortex}},
@@ -53,4 +50,81 @@
   author    = {Flanagan, David and Matsumoto, Yukihiro},
   year      = {2008},
   publisher = {O'Reilly Media}
+}
+
+@book{ashenden,
+  title     = {The Designer’s guide to VHDL},
+  author    = {Ashenden, P. J.},
+  year      = {2010},
+  publisher = {Elsevier Science}
+}
+
+
+@book{cbook
+  title = {The C book},
+  author = {Banahan, M. and Brady, D. and Moran, M.},
+  publisher = {Addison Wesley},
+  year = {1991},
+  url = {https://publications.gbdirect.co.uk/c_book/}
+}
+
+@book{linuxkernel
+  title = {Understanding the Linux Kernel},
+  author = {Bovet, Daniel P. and Cesati, Marco},
+  publisher = {O'Reilly Media Inc.},
+  year = {2005},
+  url = {https://www.oreilly.com/library/view/understanding-the-linux/0596002130/ch04.html}
+}
+
+
+@manual{intel-embbeded-ip-user-guide
+title = {Embedded Peripherals IP USER Guide},
+publisher = {Intel},
+author = {Intel},
+year = {2021},
+url = {https://www.intel.com/content/dam/www/programmable/us/en/pdfs/literature/ug/ug_embedded_ip.pdf}
+}
+
+@manual{adxl345
+title = {ADXL345 Digital Accelerometer},
+publisher = {Analog Devices},
+author = {Analog Devices},
+url = {https://www.analog.com/en/products/adxl345.html}
+}
+
+
+@manual{adxl345-datasheet
+title = {ADXL345 Digital Accelerometer datasheet},
+publisher = {Analog Devices},
+author = {Analog Devices},
+url = {https://www.analog.com/media/en/technical-documentation/data-sheets/ADXL345.pdf}
+}
+
+@manual{de10-lite-user-manual
+title = {DE10-Lite User Manual},
+publisher = {Terasic Inc},
+author = {Terasic Inc},
+url = {https://www.terasic.com.tw/cgi-bin/page/archive_download.pl?Language=English&No=1021&FID=a13a2782811152b477e60203d34b1baa}
+}
+
+@manual{uart-usb-cable
+title = {TTL-232R-RPi Debug Cable for Raspberry Pi Datasheet},
+publisher = {FTDI Chip},
+author = {FTDI Chip},
+url = {https://docs.rs-online.com/12f1/0900766b811b9e83.pdf}
+}
+
+
+@manual{ucosii-manual
+title = {$\mu$C/OS-II Documentation},
+publisher = {Micrium} ,
+author = {Micrium},
+url = {https://micrium.atlassian.net/wiki/spaces/osiidoc/overview}
+}
+
+
+@manual{ucosii
+title = {The $\mu$/OS RTOS and Stacks},
+publisher = {Weston Embedded Soutions},
+url = {https://weston-embedded.com/micrium-kernels}
 }
