Added material for main content and the first exercise

--- a/fys4220-jbook/references.bib
+++ b/fys4220-jbook/references.bib
@@ -76,6 +76,13 @@
   url = {https://www.oreilly.com/library/view/understanding-the-linux/0596002130/ch04.html}
 }
 
+@book{lameres
+  title= {Introduction to Logic Circuits \& Logic Design with VHDL},
+  author= {Brock K. LaMeres},
+  publisher= {Springer Cham},
+  year= {2019}
+}
+
 
 @manual{intel-embedded-ip-user-guide
 title = {Embedded Peripherals IP USER Guide},
