--- a/fys4220-jbook/part-project/data_rate.ipynb
+++ b/fys4220-jbook/part-project/data_rate.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "(project-rtos)=\n",
-    "# RTOS \n",
+    "# P3: RTOS \n",
     "\n",
     "In this part of the embedded system project you will build the final software application to read out accelerometer sensor data and present this data on the host PC. The software application running on the microcontroller system will use a real-time operating system kernel to split the required functionality into smaller units (tasks), and intertask communication services to communicate data between tasks.\n",
     "\n",
     "```{admonition} Preparation\n",
-    "Before you start, work through the example described in {numref}`rtos-basic-example` and {numref}`rtos-semaphores-example`. \n",
+    "Before you start, work through the example described in {ref}`exercises-rtos-basic-example` and {ref}`exercises-rtos-semaphores-example`. \n",
     "\n",
     "These examples will provide you with the basics of how to write a uC/OS-II software application. \n",
     "\n",
@@ -53,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "b9d4fa00",
    "metadata": {},
    "outputs": [
     {
@@ -77,16 +78,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "620110a6",
    "metadata": {},
    "source": [
     "This does not take into account the overhead of receiving the message from the accelerometer read task and executing the IOWR function to write to the TX data register of the UART. However, it sets an upper limit for the data rate. \n",
     "\n",
-    "The maxium SPI clock frequency for the ADXL345 is 5 MHz according to Table 10. on page 17 in the ADXL345 datasheet. However, the SPI IP core was configured to run at 1 MHz when included in the microcontroller system in {numref}`project-spi-module`. When using the multi-byte mode of the SPI interface, one byte is first sent to the ADXL345 module before it returns the number of specified bytes. The time it takes to read out 6 data registers is:\n"
+    "The maxium SPI clock frequency for the ADXL345 is 5 MHz according to Table 10. on page 17 in the ADXL345 datasheet. However, the SPI IP core was configured to run at 1 MHz when included in the microcontroller system in {ref}`project-spi-module`. When using the multi-byte mode of the SPI interface, one byte is first sent to the ADXL345 module before it returns the number of specified bytes. The time it takes to read out 6 data registers is:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "e784a35c",
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +110,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "963dead3",
    "metadata": {},
    "source": [
     "This is clearly faster than it takes to send the same data packet over the UART to the host PC. However, the output data rate of the ADXL345 is limited by the data rate of the interal ADC. According to Table 7. on page 14 in the ADXL345 datasheet{cite}`adxl345-datasheet`, the maximum output data rate is 3200 Hz. This means that the data registers of the ADXL345 are updated every 0.3 millisecond. This is still faster than UART interface. \n",
@@ -118,6 +122,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fbb01407",
    "metadata": {},
    "source": [
     "## Interrupts and data flow\n",
@@ -185,7 +190,7 @@
     "\n",
     "### UART send task\n",
     "When sending data over the UART, the UART module will be busy for 86 microseconds and will not accept more than one new data byte during this period.\n",
-    "From {numref}`project-uart-controller`, we know that the UART module will provide an interrupt when a transaction on either the TX or RX line is complete. You can use this interrupt to control flow of data to the UART module. \n",
+    "From {ref}`project-uart-controller`, we know that the UART module will provide an interrupt when a transaction on either the TX or RX line is complete. You can use this interrupt to control flow of data to the UART module. \n",
     "\n",
     "````{admonition} Tip\n",
     ":class: tip, dropdown\n",
@@ -389,7 +394,8 @@
    "hash": "7db0fe3774995c1b183f889eaeaabc18a695d6167e267f120d96fcf34fa61792"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('fys4220-env': pyenv)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -402,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
