--- a/fys4220-jbook/part-project/data_rate.ipynb
+++ b/fys4220-jbook/part-project/data_rate.ipynb
@@ -269,7 +269,7 @@
     "# Modify RESOLUTION, RANGE and COM port according to your setting.\n",
     "RESOLUTION = \"FULL\" # 10BIT\n",
     "RANGE = 2 # 4/8/16\n",
-    "COM_PORT = \"COM4\"\n",
+    "COM_PORT = \"COM4\" # Change according to the port which is used in your case\n",
     "\n",
     "\n",
     "HEADER_ID = 0xe2\n",
@@ -370,8 +370,10 @@
     "    serial_thread = threading.Thread(target=serial_data, args=(lambda: run_app,))\n",
     "\n",
     "    # Set threads as deamon -- threads are automatically killed if program is killed\n",
-    "    keyboard_thread.setDaemon(True)\n",
-    "    serial_thread.setDaemon(True)\n",
+    "    # if you are using Python 3.10 the following two lines seems to give an error messages.\n",
+    "    # For now, just comment them out.\n",
+    "    # keyboard_thread.setDaemon(True)\n",
+    "    # serial_thread.setDaemon(True)\n",
     "\n",
     "    # Start threads\n",
     "    keyboard_thread.start()\n",
@@ -390,11 +392,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "7db0fe3774995c1b183f889eaeaabc18a695d6167e267f120d96fcf34fa61792"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('jbook')",
    "language": "python",
    "name": "python3"
   },
@@ -408,7 +407,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0c0e2d7457e432ccb5f3a97cd4f9575928f485992ebb5e8cb1351ee9bf7955e1"
+   }
   }
  },
  "nbformat": 4,
